--- a/RMSuit_v2/RMSuit_v2/Components/Pages/Home.razor
+++ b/RMSuit_v2/RMSuit_v2/Components/Pages/Home.razor
@@ -21,7 +21,7 @@ else
         <select id="locationSelect" @bind="selectedLocation">
             <option value="">--Seleccione una opción--</option>
             <option value="salonmapa">Salón</option>
-            <option value="terraza">Terraza</option>
+            <option value="terrazamapa">Terraza</option>
         </select>
         <button @onclick="NavigateToSelectedLocation">Confirmar</button>
     </div>
