--- a/RMSuit_v2/Components/App.razor
+++ b/RMSuit_v2/Components/App.razor
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="RMSuit_v2.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" />
+
+
     <HeadOutlet />
 </head>
 
