--- a/RMSuit_v2/Components/Layout/NavMenu.razor
+++ b/RMSuit_v2/Components/Layout/NavMenu.razor
@@ -25,6 +25,33 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Listados
             </NavLink>
         </div>
+        <div class="nav-item px-3 dropdown">
+            <NavLink class="nav-link  dropdown-toggle" @onclick="()=>expandSubNav=!expandSubNav">
+                <span class="bi bi-person-fill-gear" aria-hidden="true"></span>Gestión de camareros
+            </NavLink>
+            @if (expandSubNav)
+            {
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="addwaiter">
+                        <span class="bi bi-lock-nav-menu"></span>Añadir Camarero
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="listWaiters">
+                        <span class="bi bi-lock-nav-menu"></span>Eliminar/Modificar Camarero
+                    </NavLink>
+                </div>
+
+
+            }
+        </div>
+
     </nav>
 </div>
 
+@code {
+
+    private bool expandSubNav = true;
+
+
+}
