--- a/RMSuit_v2/Components/Pages/Gestion camarero/AddWaiter.razor
+++ b/RMSuit_v2/Components/Pages/Gestion camarero/AddWaiter.razor
@@ -1,5 +1,7 @@
 ﻿@page "/addwaiter"
 @using RMSuit_v2.Models
+@using RMSuit_v2.Services
+
 @inject ApiService ApiService
 @inject ILogger<AddWaiter> Logger
 
