--- a/RMSuit_v2/Components/Pages/Gestion camarero/ListWaiters.razor
+++ b/RMSuit_v2/Components/Pages/Gestion camarero/ListWaiters.razor
@@ -1,5 +1,8 @@
 ﻿@page "/listwaiters"
 @using RMSuit_v2.Models
+@using RMSuit_v2.Services
+
+
 @inject ApiService ApiService
 @inject ILogger<ListWaiters> Logger
 @inject NavigationManager Navigation
